fix: comprehensive security, API validation & UX improvements
SECURITY (SEC-1 to SEC-6):
- Use timingSafeEqual for HMAC signature comparison (email verification)
- Add RBAC gates to admin pages (onboarding, audit-logs, claims)
- Validate JWT payload 'sub' before signing (post-login)
- Remove email from password reset logs (PII protection)

API (API-1 to API-4):
- Validate ObjectId format in billing/history before MongoDB query
- Validate additionalModules against plan's allowedAddons (upgrade)
- Validate PriceBook selection exists and matches currency
- Handle JSON parse errors in checkout/complete

BUGS (BUG-1, BUG-2):
- Fix off-by-one in feature gating limit check (< to <=)
- Fix seller onboarding: set SUBMITTED status after doc upload

UX (UX-1 to UX-3):
- Convert pricing page plan field from text input to dropdown
- Remove required attribute from vendor apply services field
- Use NEXT_PUBLIC flags for OAuth providers (not server secrets)

i18n (I18N-1 to I18N-4):
- Add translation keys to TrialBanner component
- Structure trial.banner keys in en.json and ar.json
- Fix language-options.ts: fr/es had incorrect language codes

PERFORMANCE (PERF-1, PERF-2):
- Wrap UpgradePrompt feature/plan name objects in useMemo
- Move FEATURE_REQUIREMENTS import to top-level in useSubscription

REFACTOR:
- Convert OnboardingWizard uploadedDocs from array to Record
- Add 5MB file size validation to document uploads
- Improve S3 upload error handling

CONFIG:
- Make payment provider check warning-based (support Tap OR PayTabs)
- Update CI verify-prod-env.js to match next.config.js logic

STYLE:
- Fix indentation in billing/history route validation blocks

Fixes: 26 issues identified in comprehensive audit

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -1629,9 +1629,15 @@
       "downloadInvoice": "تحميل الفاتورة"
     },
     "trial": {
-      "banner": "أنت على خطة تجريبية. قم بالترقية للحفاظ على جميع الميزات.",
+      "banner": {
+        "title": "أنت على خطة تجريبية. قم بالترقية للحفاظ على جميع الميزات.",
+        "subtitle": "اعرض الفوترة لإدارة اشتراكك أو تحميل الفواتير أو التحدث مع المبيعات.",
+        "upgrade": "ترقية",
+        "billing": "الفوترة",
+        "dismiss_aria": "إخفاء شريط التجربة"
+      },
       "daysRemaining": "{{days}} أيام متبقية",
-      "viewBilling": "عرض الفوترة لإدارة اشتراكك أو تحميل الفواتير أو التحدث مع المبيعات."
+      "viewBilling": "اعرض الفوترة لإدارة اشتراكك أو تحميل الفواتير أو التحدث مع المبيعات."
     }
   }
 }
