--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1629,7 +1629,13 @@
       "downloadInvoice": "Download Invoice"
     },
     "trial": {
-      "banner": "You're on a trial plan. Upgrade to keep all features active.",
+      "banner": {
+        "title": "You’re on a trial plan. Upgrade to keep all features active.",
+        "subtitle": "View billing to manage your subscription, download invoices, or talk to sales.",
+        "upgrade": "Upgrade",
+        "billing": "Billing",
+        "dismiss_aria": "Dismiss trial banner"
+      },
       "daysRemaining": "{{days}} days remaining",
       "viewBilling": "View billing to manage your subscription, download invoices, or talk to sales."
     }
