fix(rbac): Improve role normalization, i18n, and plan-aware UI
MAJOR fixes:
- SubRoleSelector: Add plan-aware module filtering using PLAN_GATES
- SubRoleSelector: Replace hardcoded labels with i18n keys

MINOR fixes:
- Add translations for sub-roles and modules (EN + AR)
- Add 6 new tests for case-insensitive role normalization
- Test coverage for legacy aliases (EMPLOYEE, MANAGEMENT, PROPERTY_OWNER)

Changes:
- components/admin/SubRoleSelector.tsx: i18n + plan-aware preview
- tests/hooks/useFMPermissions.test.ts: +6 role normalization tests
- i18n/en.json: +admin.subRoles.* and admin.modules.* keys
- i18n/ar.json: Arabic translations for subRoles/modules

Addresses code review feedback:
- Module preview now respects PLAN_GATES to avoid overpromising
- All hardcoded labels replaced with t() calls
- Role normalization tested for case-insensitivity

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -1504,6 +1504,40 @@
       "title": "نتائج"
     }
   },
+  "admin": {
+    "subRoles": {
+      "financeOfficer": {
+        "label": "مسؤول المالية",
+        "description": "يدير الميزانيات والفواتير والتقارير المالية"
+      },
+      "hrOfficer": {
+        "label": "مسؤول الموارد البشرية",
+        "description": "يدير سجلات الموظفين والرواتب والبيانات الشخصية"
+      },
+      "supportAgent": {
+        "label": "وكيل الدعم",
+        "description": "يتعامل مع استفسارات العملاء والتذاكر"
+      },
+      "operationsManager": {
+        "label": "مدير العمليات",
+        "description": "يشرف على أوامر العمل وعمليات العقارات"
+      }
+    },
+    "modules": {
+      "dashboard": "لوحة التحكم",
+      "workOrders": "أوامر العمل",
+      "properties": "العقارات",
+      "finance": "المالية",
+      "hr": "الموارد البشرية",
+      "administration": "الإدارة",
+      "crm": "إدارة علاقات العملاء",
+      "marketplace": "السوق",
+      "support": "الدعم",
+      "compliance": "الامتثال",
+      "reports": "التقارير",
+      "system": "النظام"
+    }
+  },
   "ats": {
     "errors": {
       "authenticationRequired": "المصادقة مطلوبة",
