fix: stabilize QA routes and CI guards

--- a/i18n/sources/about.translations.json
+++ b/i18n/sources/about.translations.json
@@ -12,6 +12,7 @@
     "about.metaTitle": "About Fixzit - Leading Property & Facilities Management Platform",
     "about.phone": "+968 9999 9999",
     "about.phoneLabel": "Call us",
+    "about.phoneUnavailable": "Phone number not configured",
     "about.properties": "Properties Under Management",
     "about.statsSection": "Our Stats",
     "about.subtitle": "A unified platform for property management, maintenance, facilities, and finance",
@@ -31,6 +32,7 @@
     "about.metaTitle": "عن Fixzit - منصة إدارة الأملاك والصيانة الرائدة",
     "about.phone": "+968 9999 9999",
     "about.phoneLabel": "اتصل بنا",
+    "about.phoneUnavailable": "لم يتم إعداد رقم الهاتف",
     "about.properties": "عقار تحت الإدارة",
     "about.statsSection": "إحصائياتنا",
     "about.subtitle": "منصة موحدة لإدارة العقارات والصيانة والمرافق والشؤون المالية",
