--- a/i18n/sources/login.translations.json
+++ b/i18n/sources/login.translations.json
@@ -39,6 +39,7 @@
     "login.forgotPassword": "Forgot Password?",
     "login.googleLogin": "Login with Google",
     "login.hidePassword": "Hide password",
+    "login.identifierLabel": "Email or Employee Number",
     "login.identifier": "Email or Employee ID",
     "login.identifierHint": "Enter your email or employee ID",
     "login.identifierPlaceholder": "Email or Employee ID",
@@ -124,6 +125,7 @@
     "login.forgotPassword": "نسيت كلمة المرور؟",
     "login.googleLogin": "تسجيل الدخول باستخدام Google",
     "login.hidePassword": "إخفاء كلمة المرور",
+    "login.identifierLabel": "البريد الإلكتروني أو رقم الموظف",
     "login.identifier": "البريد الإلكتروني أو رقم الموظف",
     "login.identifierHint": "أدخل بريدك الإلكتروني أو رقم الموظف",
     "login.identifierPlaceholder": "البريد الإلكتروني أو رقم الموظف",
