feat(i18n): Add 16 missing admin.notifications.* translation keys
Added EN/AR translations for:
- admin.notifications.channel/channels
- admin.notifications.configStatus/configured/notConfigured
- admin.notifications.failed/failure
- admin.notifications.helpTitle
- admin.notifications.phoneHint/phoneNumber/phoneRequired
- admin.notifications.results
- admin.notifications.sendButton/sendTest/sent
- admin.notifications.testSubtitle/testTitle

Regenerated dictionaries: 31,170 keys for both EN and AR.

--- a/i18n/sources/admin.translations.json
+++ b/i18n/sources/admin.translations.json
@@ -196,14 +196,20 @@
     "admin.monitoring.description": "Real-time system health and metrics",
     "admin.monitoring.title": "System Monitoring",
     "admin.monitoring.uptime": "Uptime",
+    "admin.notifications.channel": "Channel",
     "admin.notifications.channels": "Delivery Channels",
     "admin.notifications.characters": "characters",
     "admin.notifications.comingSoon": "Coming Soon",
+    "admin.notifications.configStatus": "Configuration Status",
+    "admin.notifications.configured": "Configured",
     "admin.notifications.description": "Manage system notifications and alerts",
     "admin.notifications.errors.emptyFields": "Subject and message are required",
     "admin.notifications.errors.historyFetch": "Failed to load notification history",
     "admin.notifications.errors.noChannels": "Please select at least one channel",
     "admin.notifications.errors.sendFailed": "Failed to send notification",
+    "admin.notifications.failed": "Failed to send",
+    "admin.notifications.failure": "Failure",
+    "admin.notifications.helpTitle": "Notification Help",
     "admin.notifications.hideHistory": "Hide History",
     "admin.notifications.historyTitle": "Notification History",
     "admin.notifications.important": "Important",
@@ -218,7 +224,11 @@
     "admin.notifications.noMessage": "[No Message]",
     "admin.notifications.none": "None",
     "admin.notifications.noSubject": "[No Subject]",
+    "admin.notifications.notConfigured": "Not Configured",
     "admin.notifications.pending": "Pending",
+    "admin.notifications.phoneHint": "Include country code (e.g., +968...)",
+    "admin.notifications.phoneNumber": "Phone Number",
+    "admin.notifications.phoneRequired": "Phone number is required",
     "admin.notifications.preview": "Preview",
     "admin.notifications.priority": "Priority",
     "admin.notifications.priority.high": "High",
@@ -230,14 +240,20 @@
     "admin.notifications.recipients.tenants": "Tenants",
     "admin.notifications.recipients.users": "Users",
     "admin.notifications.recipientType": "Recipient Type",
+    "admin.notifications.results": "Test Results",
     "admin.notifications.send": "Send Notification",
+    "admin.notifications.sendButton": "Send Test Message",
     "admin.notifications.sending": "Sending...",
+    "admin.notifications.sendTest": "Send Test Message",
+    "admin.notifications.sent": "Test message sent successfully!",
     "admin.notifications.sentBy": "Sent by",
     "admin.notifications.showHistory": "Show History",
     "admin.notifications.subject": "Subject",
     "admin.notifications.subjectPlaceholder": "Enter notification subject...",
     "admin.notifications.subtitle": "Broadcast messages via Email, SMS, or WhatsApp",
     "admin.notifications.success": "Notification sent successfully",
+    "admin.notifications.testSubtitle": "Verify your notification configuration",
+    "admin.notifications.testTitle": "Notification Testing",
     "admin.notifications.title": "Notifications",
     "admin.notifications.to": "To",
     "admin.notifications.via": "Via",
@@ -637,14 +653,20 @@
     "admin.monitoring.description": "صحة النظام والمقاييس في الوقت الفعلي",
     "admin.monitoring.title": "مراقبة النظام",
     "admin.monitoring.uptime": "وقت التشغيل",
+    "admin.notifications.channel": "القناة",
     "admin.notifications.channels": "قنوات التسليم",
     "admin.notifications.characters": "الشخصيات",
     "admin.notifications.comingSoon": "قريباً",
+    "admin.notifications.configStatus": "حالة التهيئة",
+    "admin.notifications.configured": "مُهيأ",
     "admin.notifications.description": "إدارة إشعارات وتنبيهات النظام",
     "admin.notifications.errors.emptyFields": "مطلوب الموضوع والرسالة",
     "admin.notifications.errors.historyFetch": "فشل تحميل سجل الإشعارات",
     "admin.notifications.errors.noChannels": "الرجاء تحديد قناة واحدة على الأقل",
     "admin.notifications.errors.sendFailed": "فشل في إرسال الإخطار",
+    "admin.notifications.failed": "فشل في الإرسال",
+    "admin.notifications.failure": "فشل",
+    "admin.notifications.helpTitle": "مساعدة الإشعارات",
     "admin.notifications.hideHistory": "إخفاء التاريخ",
     "admin.notifications.historyTitle": "تاريخ الإخطار",
     "admin.notifications.important": "مهم",
@@ -671,14 +693,24 @@
     "admin.notifications.recipients.tenants": "المستأجرين",
     "admin.notifications.recipients.users": "المستخدمين",
     "admin.notifications.recipientType": "نوع المستلم",
+    "admin.notifications.notConfigured": "غير مُهيأ",
+    "admin.notifications.phoneHint": "أدخل رمز الدولة (مثل: 968+...)",
+    "admin.notifications.phoneNumber": "رقم الهاتف",
+    "admin.notifications.phoneRequired": "رقم الهاتف مطلوب",
+    "admin.notifications.results": "نتائج الاختبار",
     "admin.notifications.send": "إرسال الإخطار",
+    "admin.notifications.sendButton": "إرسال رسالة اختبار",
     "admin.notifications.sending": "إرسال...",
+    "admin.notifications.sendTest": "إرسال رسالة اختبار",
+    "admin.notifications.sent": "تم إرسال رسالة الاختبار بنجاح!",
     "admin.notifications.sentBy": "أرسلت بواسطة",
     "admin.notifications.showHistory": "عرض التاريخ",
     "admin.notifications.subject": "موضوع",
     "admin.notifications.subjectPlaceholder": "أدخل موضوع الإخطار...",
     "admin.notifications.subtitle": "بث الرسائل عبر البريد الإلكتروني أو الرسائل القصيرة أو WhatsApp",
     "admin.notifications.success": "تم إرسال الإشعار بنجاح",
+    "admin.notifications.testSubtitle": "تحقق من إعدادات الإشعارات",
+    "admin.notifications.testTitle": "اختبار الإشعارات",
     "admin.notifications.title": "الإشعارات",
     "admin.notifications.to": "ل",
     "admin.notifications.via": "عبر",
