fix: complete deep-dive fixes - all tests passing
- Seed script guards: Moved from module-load to main() with test bypass
- seed-marketplace-shared.js: Removed guard (library modules shouldn't exit)
- profile.retry: Added to EN/AR source and generated dictionaries
- returns-service.test.ts: Added SouqSeller creation with all required fields

Verification gates:
- TypeScript: ✅ 0 errors
- ESLint: ✅ 0 errors
- Tests: ✅ 1962/1962 passed
- Translation audit: ✅ Catalog parity + code coverage OK

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -4312,6 +4312,7 @@
       "2FADesc": "[AR] 2 F A Desc",
       "update": "تحديث"
     },
+    "retry": "إعادة المحاولة",
     "quickActions": {
       "title": "[AR] Profile Quick Actions",
       "system": "[AR] System",
