--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4312,6 +4312,7 @@
       "2FADesc": "2 F A Desc",
       "update": "Update"
     },
+    "retry": "Retry",
     "quickActions": {
       "title": "Profile Quick Actions",
       "system": "System",
