chore(cleanup): remove legacy SMS provider references from env, translations, instrumentation
- Remove Twilio/Unifonic/Nexmo/AWS-SNS from .env.example
- Update admin.translations.json for Taqnyat-only
- Clean instrumentation-node.ts logging

--- a/i18n/sources/admin.translations.json
+++ b/i18n/sources/admin.translations.json
@@ -112,7 +112,7 @@
     "admin.featureSettings.features.referralProgram.label": "Referral Program",
     "admin.featureSettings.features.serviceRatings.description": "Allow customers to rate service providers",
     "admin.featureSettings.features.serviceRatings.label": "Service Ratings",
-    "admin.featureSettings.features.smsNotifications.description": "Send SMS notifications via Twilio/Unifonic",
+    "admin.featureSettings.features.smsNotifications.description": "Send SMS notifications via Taqnyat (CITC compliant)",
     "admin.featureSettings.features.smsNotifications.label": "SMS Notifications",
     "admin.featureSettings.features.sparePartsApproval.description": "Require tenant approval for spare parts purchases",
     "admin.featureSettings.features.sparePartsApproval.label": "Spare Parts Approval",
@@ -215,7 +215,7 @@
     "admin.notifications.important": "Important",
     "admin.notifications.info.1": "All notifications are logged for audit",
     "admin.notifications.info.2": "Email requires SENDGRID_API_KEY",
-    "admin.notifications.info.3": "SMS requires TWILIO credentials",
+    "admin.notifications.info.3": "SMS requires TAQNYAT credentials",
     "admin.notifications.info.4": "WhatsApp coming soon",
     "admin.notifications.message": "Message Content",
     "admin.notifications.messageBody": "Message",
@@ -569,7 +569,7 @@
     "admin.featureSettings.features.referralProgram.label": "برنامج الإحالة",
     "admin.featureSettings.features.serviceRatings.description": "السماح للعملاء بتقييم مقدمي الخدمة",
     "admin.featureSettings.features.serviceRatings.label": "تقييمات الخدمة",
-    "admin.featureSettings.features.smsNotifications.description": "إرسال رسائل SMS عبر Twilio/Unifonic",
+    "admin.featureSettings.features.smsNotifications.description": "إرسال رسائل SMS عبر تقنية (متوافق مع هيئة CITC)",
     "admin.featureSettings.features.smsNotifications.label": "الإشعارات عبر الرسائل القصيرة",
     "admin.featureSettings.features.sparePartsApproval.description": "طلب موافقة المستأجر على مشتريات قطع الغيار",
     "admin.featureSettings.features.sparePartsApproval.label": "الموافقة على قطع الغيار",
@@ -672,7 +672,7 @@
     "admin.notifications.important": "مهم",
     "admin.notifications.info.1": "يتم تسجيل جميع الإخطارات للتدقيق",
     "admin.notifications.info.2": "يتطلب البريد الإلكتروني SENDGRID_API_KEY",
-    "admin.notifications.info.3": "تتطلب الرسائل القصيرة بيانات اعتماد TWILIO",
+    "admin.notifications.info.3": "تتطلب الرسائل القصيرة بيانات اعتماد TAQNYAT",
     "admin.notifications.info.4": "الواتس اب قريبا",
     "admin.notifications.message": "محتوى الرسالة",
     "admin.notifications.messageBody": "رسالة",
